--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,57 +294,6 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  # deploy-backend:
-  #   docker:
-  #     - image: cimg/python:3.10
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install Ansible
-  #         command: |
-  #           python3 -m pip install --user ansible
-  #     - run:
-  #         name: Install AWS CLI dependencies
-  #         working_directory: /tmp
-  #         command: |
-  #           sudo apt-get update && sudo apt-get install -yy less
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip awscliv2.zip
-  #           sudo ./aws/install
-  #     - run:
-  #         name: Install Node.js 13.8.0
-  #         command: |
-  #           curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-  #           sudo apt install -y nodejs
-  #           sudo npm install --global n
-  #           sudo n 13.8.0
-  #     - add_ssh_keys:
-  #         fingerprints: ["41:c0:fe:34:c5:64:dd:57:d3:02:2e:b1:c8:9f:16:64"]
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           cd backend
-  #           npm install
-  #     - run:
-  #         name: Package Backend
-  #         command: |
-  #           cd backend
-  #           npm run build
-  #           tar -czf artifact.tar.gz dist/* package*
-
-  #           cd ..
-  #           cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
-  #     - run:
-  #         name: Deploy Backend
-  #         command: |
-  #           export TYPEORM_MIGRATIONS_DIR=./migrations
-  #           export TYPEORM_ENTITIES=./modules/domain/*/.entity{.ts,.js}
-  #           export TYPEORM_MIGRATIONS_DIR=./migrations/*.ts
-  #           cd .circleci/ansible
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
 
   deploy-backend:
     docker:
@@ -370,6 +319,8 @@ jobs:
             sudo apt install -y nodejs
             sudo npm install --global n
             sudo n 13.8.0
+      - restore_cache:
+          keys: [backend-deps]
       - add_ssh_keys:
           fingerprints: ["41:c0:fe:34:c5:64:dd:57:d3:02:2e:b1:c8:9f:16:64"]
       - attach_workspace:
