--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -402,43 +402,34 @@ jobs:
       - revert-migrations
   cloudfront-update:
     docker:
-      - image: cimg/python:3.10
+      - image: amazon/aws-cli
     steps:
       - checkout
       - attach_workspace:
           at: ~/
+      -run:
+        name: install dependencies
+        command: |
+          yum install -y tar gzip curl
+          curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+          yum install -y nodejs
       - run:
-          name: Install AWS CLI dependencies
-          working_directory: /tmp
-          command: |
-            sudo apt-get update && sudo apt-get install -yy less
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-      - run:
-          name: Install Node.js 13.8.0
-          command: |
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-            sudo apt install -y nodejs
-            sudo npm install --global n
-            sudo n 13.8.0
-      - run:
-          name: Update cloudfront distribution
-          command: |
-            export OldWorkflowID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
-            echo $OldWorkflowID >> ~/OldWorkflowID.txt
-            cat ~/OldWorkflowID.txt
+        name: Update cloudfront distribution
+        command: |
+          export OldWorkflowID=$(aws cloudformation \
+          list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+          --no-paginate --output text)
+          echo $OldWorkflowID >> ~/OldWorkflowID.txt
+          cat ~/OldWorkflowID.txt
 
-            aws cloudformation deploy \
-            --template-file .circleci/files/cloudfront.yml \
-            --stack-name "InitialStack-${OldWorkflowID}" \
-            --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --tags project=udapeople
+          aws cloudformation deploy \
+          --template-file .circleci/files/cloudfront.yml \
+          --stack-name "InitialStack-${OldWorkflowID}" \
+          --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+          --tags project=udapeople
 
-            echo OldWorkflowID: "${OldWorkflowID}"
-            echo Current Workflow Id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          echo OldWorkflowID: "${OldWorkflowID}"
+          echo Current Workflow Id: "${CIRCLE_WORKFLOW_ID:0:7}"
       - destroy-environment
       - revert-migrations
 
